<resources>
    <string name="app_name">Service Booking</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="password_not_match">Conform password not match</string>
    <string name="phone_to_short">This Phone number is too short</string>
    <string name="error_invalid_date">This date is invalid</string>

    <string name="cleaning_service">Cleaning Service</string>
    <string name="user_manage">User Manage</string>
    <string name="user_profile">User Profile</string>
    <string name="communicate">Communicate</string>
    <string name="view_offer">View Offers</string>
    <string name="rate_us">Rating Us</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="my_services">My Services</string>
    <string name="cart">Cart</string>
    <string name="service">Service</string>
    <string name="team">Team</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_note">Forgot your login details? Get help signing in.</string>
    <string name="sinup_note">Don\'t have an account? Sign up.</string>
    <string name="register">Register</string>
    <string name="dob">DOB</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_chk_note">Sign up to recive our special offers,updates and a lot more.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="reg_chk_note">Please Check our policy</string>
    <string name="forgot_note_2">Enter the email address that you used to sign up on</string>
    <string name="submit">Submit</string>
    <string name="reviews">Reviews</string>
    <string name="pros">Pros</string>
    <string name="by">by&#160;</string>
    <string name="write_review">Write Review</string>
    <string name="approx_price">Approx Price:&#160;</string>
    <string name="approx_time">Approx Time:&#160;</string>
    <string name="book">Book</string>
    <string name="working_hour">Working Hour:\u0020</string>
    <string name="experience">Experience:\u0020</string>
    <string name="qualified">Qualified</string>
    <string name="per">\u0020Per</string>
    <string name="Continue">Continue</string>
    <string name="apply">Apply</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="items">\u0020Items</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="visit_address">Visit Address</string>
    <string name="edit">Edit</string>
    <string name="detail">Detail</string>
    <string name="registration_successfull">Registration successful</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_photo">Add Photo!</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="record_not_found">Record Not Found</string>
    <string name="profile_pic_updated">Profile Picture Updated Successfully</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="login">Login</string>
    <string name="cart_empty">Cart is Empty</string>
    <string name="offer">Offers</string>
    <string name="valid">Valid:\u0020</string>
    <string name="code">CODE:\u0020</string>
    <string name="to">\u0020To\u0020</string>
    <string name="description">Description:\u0020</string>
    <string name="text_copied">Text Copied</string>
    <string name="please_enter_valid_voucher_code">Please enter valid voucher code.</string>
    <string name="view_all">View All</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure!\nyou want to clear cart?</string>
    <string name="are_you_sure_cancel_service">Are you sure!\nyou want to cancel service?</string>
    <string name="check">Check</string>
    <string name="add_address">Add Address</string>
    <string name="landmark">Landmark</string>
    <string name="full_name">Full Name</string>
    <string name="zip_code">Zip/ Area Code</string>
    <string name="added_delivery_ddress">Successfully added Delivery Address.</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="choose_your_delivery_address">Choose your Delivery Address</string>
    <string name="add_new">+ ADD NEW</string>
    <string name="delete">DELETE</string>
    <string name="edit2">EDIT</string>
    <string name="edit_address">Edit Address</string>
    <string name="select_delivery_date">Select delivery date</string>
    <string name="no_address_found">No address found. Please add one.</string>
    <string name="morning">Morning (</string>
    <string name="afternoon">Afternoon (</string>
    <string name="evening">Evening (</string>
    <string name="appointment">Appointment:\u0020</string>
    <string name="zero_time">00:00</string>
    <string name="please_select_time">Please select time</string>
    <string name="visit_time">Visit Time:\u0020</string>
    <string name="amount">Amount:\u0020</string>
    <string name="time_taken">\u0020Time Taken:\u0020</string>
    <string name="add_review">Add Review</string>
    <string name="pro">Pro:\u0020</string>
    <string name="contact">Contact:\u0020</string>
    <string name="countinue_home">Continue home</string>
    <string name="track_my_order">Track my order</string>
    <string name="your_appointment">Your appointment #</string>
    <string name="has_been">\u0020has been sent successfully. Visit Date :\u0020</string>
    <string name="at">\u0020At\u0020</string>
    <string name="update_soon">\u0020Our execute update soon.</string>
    <string name="pending">Pending</string>
    <string name="confirm">Confirmed</string>
    <string name="completed">Completed</string>
    <string name="year">\u0020Year</string>
    <string name="hour">\u0020Hour</string>
    <string name="your_rating">Your Rating</string>
    <string name="your_comment">Your Comment</string>
    <string name="comment_here">Your Comment Here</string>
    <string name="date">Date:\u0020</string>
    <string name="delivery_charge2">Delivery Charges:\u0020</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="summery">Summery</string>
    <string name="total">Total:\u0020</string>
    <string name="order_no">Order No.:\u0020</string>
    <string name="qty">Qty</string>
    <string name="please_select_delivery_address">Please select delivery address</string>
    <string name="add">Add</string>
    <string name="service_item_added_in_cart">Service item added in cart</string>

    <string name="min">min,</string>
    <string name="net_amount">Net Amount:</string>
    <string name="offer_code">Offer Code (</string>

    <string name="name">Name:</string>
    <string name="mobile">Mobile:</string>
    <string name="address2">Address:</string>
    <string name="landmark2">Landmark:</string>
    <string name="city2">City:</string>
    <string name="zip">Zip:</string>

    <string name="ref_no">Ref No:</string>
    <string name="visit_at">Visit At:</string>
    <string name="paid_amount">Paid Amount:</string>
    <string name="paid_by">Paid By:</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>

    <string name="my_bookings">My Bookings</string>
    <string name="thanks_for_booking">Thanks for Booking</string>
    <string name="thanks_note">Note: Appointment booking time is an approx time, Our executive will give you final confirmation call.\n\nAmount is basic service amount extra equirment and consultant charges will be applied after job completed.</string>
    <string name="booking_ref">Booking Ref :</string>
    <string name="on_date">On Date :</string>
    <string name="approx_visit_time">Approx Visit Time :</string>
    <string name="basic_amount">Basic Amount :</string>
    <string name="canceled">Canceled</string>
    <string name="started">Started</string>
    <string name="your_rating_successfully_submitted">Your rating successfully submitted</string>
    <string name="service_date_time"><![CDATA[Service Date & Time]]></string>
    <string name="wel_come">Wel Come</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_new_user">Sign Up New User</string>
    <string name="agree_with_app_usage_terms_and_conditions">Agree with app usage terms and conditions</string>
    <string name="new_user">New User</string>

</resources>
