<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/xml_gradient_bg"
        android:orientation="vertical"
        tools:context="codecanyon.servpro.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/space_20">

                    <ImageView
                        android:layout_width="@dimen/space_100"
                        android:layout_height="@dimen/space_100"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/space_50"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/ic_splash_logo" />

                    <util.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_18" />

                    <util.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/wel_come"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/et_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_20"
                        android:background="@drawable/xml_rounded_corner_white_bg_transperent"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="@dimen/space_10"
                        android:ems="10"
                        android:gravity="start|center_vertical"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/space_10"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_bg"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_10"
                        android:background="@drawable/xml_rounded_corner_white_bg_transperent"
                        android:backgroundTint="@color/white"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="@dimen/space_10"
                        android:ems="10"
                        android:gravity="start|center_vertical"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="@dimen/space_10"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_bg"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_20"
                        android:background="@drawable/xml_rounded_corner_border_white"
                        android:text="@string/sign_in"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_18" />

                    <TextView
                        android:id="@+id/tv_login_forgot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_20"
                        android:gravity="center"
                        android:text="@string/forgot_password"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_18" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_login_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="@dimen/space_10"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sign_up_new_user"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/space_10"
                        android:contentDescription="@string/sign_up_new_user"
                        android:src="@drawable/ic_arrow_right2" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>