<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:padding="@dimen/space_20"
    tools:context="codecanyon.servpro.CartActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_cart_clear"
            android:layout_toStartOf="@+id/tv_cart_clear"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cart_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/items"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_cart_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/ic_clear_cart"
            android:drawableStart="@drawable/ic_clear_cart"
            android:gravity="center_vertical"
            android:text="@string/clear_cart"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relativeLayout3"
        android:layout_below="@+id/relativeLayout2" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_cart_voucher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/space_5"
            android:layout_marginRight="@dimen/space_5"
            android:layout_toLeftOf="@+id/tv_cart_view_offer"
            android:layout_toStartOf="@+id/tv_cart_view_offer"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/black"
            app:errorTextAppearance="@style/error_appearance_black"
            app:hintTextAppearance="@style/error_appearance_black">

            <EditText
                android:id="@+id/et_cart_voucher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/coupon_code"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_cart_view_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/view_all"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_cart_check_voucher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_cart_view_offer"
            android:layout_marginTop="@dimen/space_5"
            android:background="@drawable/xml_rounded_button"
            android:padding="@dimen/space_5"
            android:text="@string/apply"
            android:textColor="@color/white" />
    </RelativeLayout>

    <include layout="@layout/include_book" />

</RelativeLayout>
