<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical"
    android:padding="@dimen/space_8"
    tools:context="codecanyon.servpro.Offers_detailActivity">

    <TextView
        android:id="@+id/tv_offer_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Navratri Offers"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code" />

        <TextView
            android:id="@+id/tv_offer_detail_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NAVRATRI2017"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/iv_offer_detail_copy_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_copy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valid" />

        <TextView
            android:id="@+id/tv_offer_detail_date_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeMinTextSize="@dimen/text_12"
            android:autoSizeTextType="uniform" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView42"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_5"
        android:text="@string/description" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TextView
            android:id="@+id/tv_offer_detail_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </ScrollView>
</LinearLayout>
